# pixelcode

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  authentication.py  database.py  dependencies.py  exceptions.py  helpers.py  main.py  models.py  pixelcode.py  websockets.py
app/auth/: config.py  dependencies.py  exceptions.py  models.py  router.py  services.py
app/clients/: models.py  router.py  services.py  utils.py
app/dependencies/: common.py  tokens.py  users.py
app/emails/: dependencies.py  services.py
app/employees/: dependencies.py  models.py  router.py  schemas.py  services.py  utils.py
app/routers/: tokens.py  users.py  websockets.py
app/users/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py  utils.py
front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
front/src/: App.vue  enums.ts  interfaces.ts  main.ts  style.css
front/src/components/: AppAdminDashboard.vue  AppButton.vue  AppInput.vue  AppLoginHero.vue  AppModalOneButton.vue  AppModalTwoButtons.vue  AppNavBar.vue  AppPageTitle.vue  AppPaginationBar.vue  AppUserEditForm.vue  AppUserList.vue  AppUserManagement.vue  AppVisualKeyboard.vue  PixelEmployeeManagement.vue  PixelHomeMenu.vue  PixelIDChoice.vue  PixelIdentifierFeedback.vue  PixelIdentifierType.vue  PixelUserInput.vue
front/src/stores/: app.ts  authentication.ts  client.ts  menu.ts  pixel.ts  search.ts  settings.ts  user.ts  users.ts
front/src/views/: AdminView.vue  HelpView.vue  (+5 more)
