[tool.poetry]
name = "pixelcode"
version = "0.1.0"
description = "Print QR codes to authorised users"
authors = ["Mazita <dev.mazita@gmail.com>"]
license = "GPL3"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
python-multipart = "^0.0.6"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.14"
requests = "^2.31.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
